fix:spacing

--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ main label {
 }
 
 .user {
-  padding: 5px 0;
+  padding: 10px 0;
   text-align: center;
   border-bottom: solid lightgrey 1px;
 }
@@ -227,6 +227,7 @@ h3 {
   margin-top: 20px;
   font-size: 40px;
 }
+
 
 .plan .col p {
   padding-top: 20px;
@@ -285,6 +286,7 @@ h4 {
 }
 .enterprise > :first-child {
   padding: 5px 0;
+  padding:10px 0;
 }
 .sub-enterprise {
   display: flex;
